--- a/progs.ini
+++ b/progs.ini
@@ -1,5 +1,7 @@
 [Orderer]
-Версия=1.3
 Описание=Это программа для добавления заказов с сайтов созданных на мегагрупRRЕсли у вас есть идеи что можно сделать лучше- пишите parfumeland@ya.ru
 Ссылка=https://github.com/Galionix/orderer/archive/master.zip
 
+[aMail]
+Описание=Тест программы с незаконченным функционаломRRНе знаю зачем вообще она
+Ссылка=https://github.com/Galionix/aMail/archive/master.zip
