--- a/progs.ini
+++ b/progs.ini
@@ -5,3 +5,7 @@
 [aMail]
 Описание=Тест программы с незаконченным функционаломRRНе знаю зачем вообще она
 Ссылка=https://github.com/Galionix/aMail/archive/master.zip
+
+[scrappy]
+Описание=Тест программы с незаконченным функционаломRRНе знаю зачем вообще она
+Ссылка=https://github.com/Galionix/scrappy/archive/master.zip
