--- a/progs.ini
+++ b/progs.ini
@@ -7,5 +7,5 @@
 Ссылка=https://github.com/Galionix/aMail/archive/master.zip
 
 [scrappy]
-Описание=Тест программы с незаконченным функционаломRRНе знаю зачем вообще она
+Описание=Программа для помощи в сборке заказов для сайтов megagroup
 Ссылка=https://github.com/Galionix/scrappy/archive/master.zip
