--- a/progs.ini
+++ b/progs.ini
@@ -9,3 +9,6 @@
 [scrappy]
 Описание=Программа для помощи в сборке заказов для сайтов megagroup
 Ссылка=https://github.com/Galionix/scrappy/archive/master.zip
+[Chat]
+Описание=Тест чата
+Ссылка=https://github.com/Galionix/chat/archive/master.zip
